# irl-quest

./: .gitignore  CODEOWNERS.md  CONTRIBUTING.md  DEPLOYMENT_REPORT.md  FINAL_STATUS_REPORT.md  LICENSE.md  Makefile  PROJECT_COMPLETION_REPORT.md  README.md  README_APK_BUILD.md  RUST_MOBILE_APP_COMPLETE.md  docker-compose.yml  simple_rag_server.py  supervisord.conf  supervisord_rust.conf  test_api.sh  test_rust_mobile_integration.sh
.github/workflows/: ci.yml
docs/: ai-prompts.md  architecture.md  backend.md  data-model.md  mobile.md  rag-design.md  security-privacy.md
docs/adr/: ADR-0001-tech-stack.md  ADR-0002-ai-sourcing.md
mobile/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
mobile/app/: build.gradle.kts
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/java/com/irlquest/app/: MainActivity.kt  TokenStorage.kt
mobile/app/src/main/java/com/irlquest/app/data/network/: ApiService.kt  RetrofitClient.kt  TokenInterceptor.kt
mobile/app/src/main/java/com/irlquest/app/data/repository/: AuthRepository.kt  QuestRepository.kt  TaskRepository.kt
mobile/app/src/main/java/com/irlquest/app/feature/focus/: FocusSessionScreen.kt  FocusViewModel.kt
mobile/app/src/main/java/com/irlquest/app/feature/quests/: QuestsScreen.kt  QuestsViewModel.kt
mobile/app/src/main/java/com/irlquest/app/feature/stats/: StatsScreen.kt  StatsViewModel.kt
mobile/app/src/main/java/com/irlquest/app/feature/tasks/: TasksScreen.kt  TasksViewModel.kt
mobile/app/src/main/java/com/irlquest/app/ui/navigation/: AppNavGraph.kt  MainScreen.kt
mobile/app/src/main/java/com/irlquest/app/ui/screens/: LoginScreen.kt  QuestGeneratorScreen.kt  QuestsScreen.kt  RegisterScreen.kt  TasksScreen.kt
scripts/: dev_db.sh  run_full_server.ps1
server/: .env  Dockerfile  README.DEV.md  alembic.ini  docker-compose.dev.yml  pyproject.toml  supervisord.conf
server-rust/: .env  Cargo.toml  Cargo_minimal.toml  Cargo_simple.toml  run.err  run.out  supervisord.conf
server-rust/migrations/: 001_initial.sql  002_extended_schema.sql  003_fix_schema.sql  004_simple_schema.sql
server-rust/scripts/: run_full_server.ps1
server-rust/src/: config.rs  db.rs  main.rs  main_full.rs  main_minimal.rs  main_simple.rs  simple_main.rs
server-rust/src/config/: mod.rs
server-rust/src/db/: mod.rs
server-rust/src/handlers/: auth.rs  focus_session.rs  health.rs  ml.rs  mod.rs  quest.rs  rag.rs  stats.rs  task.rs  user.rs
server-rust/src/middleware/: auth.rs
server-rust/src/models/: daily_stats.rs  focus_session.rs  mod.rs  quest.rs  rag.rs  simple.rs  task.rs  team.rs  user.rs
server-rust/src/rag/: mod.rs  service.rs  templates.rs
server-rust/src/services/: auth.rs  auth_old.rs  focus_session.rs  mod.rs  quest.rs  quest_old.rs  stats.rs  task.rs  task_old.rs  user.rs  user_old.rs
server/app/: cli.py  config.py  deps.py  logging.py  main.py  migrations_runner.py  security.py
server/app/api/v1/: __init__.py  auth.py  quests.py  router.py  tasks.py  users.py
server/app/db/: session.py
server/app/migrations/: env.py
server/app/migrations/versions/: 0001_create_tasks.py
server/app/models/: quest.py  task.py  user.py
server/app/repositories/: __init__.py  quest_repository.py  task_repository.py  user_repository.py
server/app/schemas/: __init__.py  quest.py  task.py  user.py
server/app/seeds/: tasks.py  users.py
server/app/services/: __init__.py  auth_service.py  quest_service.py  task_service.py  user_service.py
server/app/tests/: test_full_flow.py  test_tasks_api.py
study/: software_testing_topics.md
(+6 files in other folders)
