[project]
name = "irl-quest-server"
version = "0.1.0"
description = "Backend for IRL Quest"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.0.0",
    "pgvector>=0.7.0",
    "SQLAlchemy>=2.0.0",
    "pydantic>=1.10.0",
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "alembic>=1.10.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "httpx>=0.24.0",
    "aiosqlite>=0.18.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
